# KNN-Classifier-Server

./: .gitignore  CLI.cpp  CLI.h  CalculatorKnn.c  CalculatorKnn.cpp  CalculatorKnn.h  Classifier.cpp  Classifier.h  ClassifyCommand.cpp  ClassifyCommand.h  Command.cpp  Command.h  DefaultIO.h  Distance.cpp  Distance.h  ExitCommand.cpp  ExitCommand.h  KnnCalcAuc.h  KnnCalcCan.cpp  KnnCalcCan.h  KnnCalcChb.h  KnnCalcMan.h  KnnCalcMin.h  PrintCommand.cpp  PrintCommand.h  README.md  SendCommand.cpp  SendCommand.h  SettingCommand.cpp  SettingCommand.h  SocketIO.cpp  SocketIO.h  StandartIO.cpp  StandartIO.h  UploadCommand.cpp  UploadCommand.h  calcualtorKnn.h  client.cpp  client.h  firstFileEtai.cpp  (+5 more)
ass02/: CalculatorKnn.cpp  CalculatorKnn.h  Classifier.cpp  Classifier.h  Distance.cpp  Distance.h  KnnCalcAuc.cpp  KnnCalcAuc.h  KnnCalcCan.cpp  KnnCalcCan.h  KnnCalcChb.cpp  KnnCalcChb.h  KnnCalcMan.cpp  KnnCalcMan.h  KnnCalcMin.cpp  KnnCalcMin.h  README.md  main.cpp  makefile
ass03/: CMakeLists.txt  (+22 more)
ass04/: CLI.cpp  CLI.h  CMakeLists.txt  CalculatorKnn.h  Classifier.h  ClassifyCommand.cpp  ClassifyCommand.h  Command.cpp  Command.h  DefaultIO.h  Distance.cpp  Distance.h  ExitCommand.cpp  ExitCommand.h  KnnCalcAuc.cpp  KnnCalcCan.cpp  KnnCalcChb.cpp  KnnCalcMan.cpp  KnnCalcMan.h  KnnCalcMin.cpp  PrintCommand.cpp  PrintCommand.h  README.md  SendCommand.cpp  SendCommand.h  SettingCommand.cpp  SettingCommand.h  SocketIO.cpp  SocketIO.h  StandartIO.cpp  StandartIO.h  UploadCommand.cpp  UploadCommand.h  client.cpp  client.h  details.txt  main.cpp  makefile  server.cpp  server.h  (+1 more)
(+13 files in other folders)
